bug fixes for displaying history, RF activation label and truncated names in multi-select dialog

--- a/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-results-framework/styles/style.css
+++ b/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-results-framework/styles/style.css
@@ -615,8 +615,7 @@ div#orgUnitTree {
 #multiSelectAvailable, #multiSelectSelected {
     width: 100%;
     height: 250px;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    overflow: auto;
 }
 
 .sub-program-div {
